--- a/Chapter_06.ipynb
+++ b/Chapter_06.ipynb
@@ -406,12 +406,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea567a2-dffd-4f77-91a0-762a197599c0",
+   "id": "a7554bcc-059c-4bd5-ac4b-dcc186cd17bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "S"
+    "ตัวอย่าง ตู้ ATM\n",
+    "\n",
+    "ภายในตู้ ATM มีแบงค์สำหรับให้บริการสำหรับการถอน ประกอบไปด้วยแบงค์มูลค่า 1000, 500 และ 100 บาท\n",
+    "\n",
+    "ในการเบิกเงิน ผู้ใชังานเลือกกรอกจำนวนเงินที่ต้องการเบิกได้ เช่น\n",
+    "\n",
+    "กรอกเงินจำนวน 1900 บาท ตู้ ATM จะทำการพิจารณาจ่ายแบงค์ที่มีมูลค่าสูงสุดก่อน และค่อยพิจารณาจ่ายแบงค์มูลค่ารองลงมา\n",
+    "\n",
+    "input : 1900\n",
+    "\n",
+    "1000 : 1\n",
+    "\n",
+    "500 : 1\n",
+    "\n",
+    "100 : 4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4bb6146-0f94-4ae4-99dd-96de9e49e366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value = int(input(\"Enter your money : \"))\n",
+    "\n",
+    "print(\"1,000 : {}\".format(value // 1000))\n",
+    "print(\"500: {}\".format(value % 1000 // 500))\n",
+    "print(\"100: {}\".format(value % 1000 % 500 // 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7502194-7c9a-4120-ba99-6f2f019da12f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
